syntax = "proto3";

option  go_package = "amusing-x.com/user/service";

package user;

message ResetPasswordRequest {
  string password = 1;
  string area_code = 2;
  string phone = 3;
  string verification_code = 4;
}

message ResetPasswordResponse {
  string result = 1;
}